--- a/app/views/site_page/sitemap.html.erb
+++ b/app/views/site_page/sitemap.html.erb
@@ -1,6 +1,6 @@
 <%= react_component('Cover', {
   title: 'Sitemap',
-  image: @page_cover,
+  images: @page_cover,
   size: 'small',
   template: @site_page.site.site_template.name
 } ) %>
