--- a/app/assets/stylesheets/components/front/c-cover.scss
+++ b/app/assets/stylesheets/components/front/c-cover.scss
@@ -4,6 +4,7 @@
   align-items: flex-end;
   justify-content: center;
   padding: 50px 0 30px;
+  // The next lines are for the India template
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -36,22 +37,54 @@
     background-image: none !important;
   }
 
-  &::after {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 33%;
-    content: "";
-    background-image: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 0.3)
-    );
+  // This interferes with the image attributions and
+  // the possibility to click on the link
+  // If this is not brought back, let's just remove it
+  // &::after {
+  //   display: block;
+  //   position: absolute;
+  //   bottom: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 33%;
+  //   content: "";
+  //   background-image: linear-gradient(
+  //     to bottom,
+  //     rgba(0, 0, 0, 0),
+  //     rgba(0, 0, 0, 0.3)
+  //   );
 
-    @media print {
-      background-image: none;
+  //   @media print {
+  //     background-image: none;
+  //   }
+  // }
+
+  .slick-slider {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+
+    .slick-list {
+      height: 100%;
+    }
+
+    .slick-track {
+      height: 100%;
+    }
+
+    .slick-slide > div {
+      height: 100%;
+    }
+
+    .slide {
+      height: 100%;
+
+      .background {
+        height: 100%;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+      }
     }
   }
 
