--- a/app/assets/stylesheets/front/application-theme-carpe.scss
+++ b/app/assets/stylesheets/front/application-theme-carpe.scss
@@ -6,6 +6,8 @@ $color-1:#97BE32;
 '../../../node_modules/rc-slider/assets/index',
 '../../../node_modules/react-select/dist/react-select',
 '../../../node_modules/vizz-wysiwyg/build/rw',
+'../../../node_modules/slick-carousel/slick/slick.scss',
+'../../../node_modules/slick-carousel/slick/slick-theme.scss',
 'leaflet',
 '../helpers',
 'settings-theme-carpe',
