--- a/app/views/site_page/dashboard_v2.html.erb
+++ b/app/views/site_page/dashboard_v2.html.erb
@@ -4,7 +4,7 @@
 <%= react_component('Cover', {
   title: @site_page.name,
   subtitle: @site_page.site.name,
-  image: @page_cover,
+  images: @page_cover,
   size: 'small',
   template: @site_page.site.site_template.name
 } ) %>
