--- a/app/views/site_page/open_content_v2.html.erb
+++ b/app/views/site_page/open_content_v2.html.erb
@@ -3,7 +3,7 @@
 <%= react_component('Cover', {
   title:  @site_page.name,
   subtitle: @site_page.site.name,
-  image: @page_cover,
+  images: @page_cover,
   size: 'small',
   template: @site_page.site.site_template.name
 } ) %>
@@ -15,7 +15,6 @@
   siteSettings: defined?(@site_page.site.site_settings) ? @site_page.site.site_settings : nil,
   siteTitleOnly: @site_title_only,
   siteTemplateName: @site_page.site.site_template.name,
-  coverImage: @page_cover,
   pageSize: defined?(size) ? size : nil,
   relatedPages: @site_page.related_pages
 } ) %>
