--- a/app/views/site_page/search_results.html.erb
+++ b/app/views/site_page/search_results.html.erb
@@ -3,7 +3,7 @@
 <%= react_component('Cover', {
   title: 'Search',
   subtitle: @site_page.site.name,
-  image: @page_cover,
+  images: @page_cover,
   size: 'small',
   template: @site_page.site.site_template.name
 } ) %>
