--- a/app/views/static_page/no_permissions.html.erb
+++ b/app/views/static_page/no_permissions.html.erb
@@ -1,7 +1,7 @@
 <%= react_component('Cover', {
   title: 'Access restricted',
   subtitle: 'You don\'t have the permission to access this section',
-  image: @page_cover,
+  images: @page_cover,
   size: 'small',
   template: @site_page.site.site_template.name
 } ) %>
