Fix a bug that prevented the user from seeing the entire advanced widget
This would only happen when editing it.

--- a/app/assets/stylesheets/layouts/management/l-widget-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-widget-creation.scss
@@ -53,7 +53,7 @@
           flex-basis: calc(50% - 5px);
           flex-grow: 0;
           height: 500px;
-          overflow: hidden;
+          overflow: auto; // Should be able to see the entire chart
         }
 
         .textarea-container {
