Fix a bug where the cover images wouldn't display

--- a/app/views/site_page/homepage.html.erb
+++ b/app/views/site_page/homepage.html.erb
@@ -2,7 +2,7 @@
 
 <%= react_component('Cover', {
   title: @site_page.site.name,
-  images: @homepage_cover,
+  images: @homepage_covers,
   template: @site_page.site.site_template.name
 } ) %>
 
