Fix typo and indentation

--- a/app/views/admin/site_steps/style.html.erb
+++ b/app/views/admin/site_steps/style.html.erb
@@ -86,7 +86,7 @@
               </div>
               <hr/>
 
-              <%= react_component('AdminCarusel', {
+              <%= react_component('AdminCarousel', {
                 form: settings_form.object,
               } ) %>
 
