Bug fix in map display for LayerPanel and AnalysisModule

--- a/app/views/management/site_pages/map/_analysis.html.erb
+++ b/app/views/management/site_pages/map/_analysis.html.erb
@@ -23,7 +23,7 @@
           } catch (e) {}
         }
       });
-      var analysisModulesValue = JSON.parse('<%= settings.object.analysisModules.html_safe %>');
+      var analysisModulesValue = JSON.parse('<%= settings.object.analysisModules.try(:html_safe) %>');
 
       analysisModulesContainer.editor = analysisModulesEditor;
       analysisModulesContainer.input = analysisModulesInput;
