Style the fields to change the thumbnail and cover image of a page

--- a/app/assets/stylesheets/components/shared/c-inputs-container.scss
+++ b/app/assets/stylesheets/components/shared/c-inputs-container.scss
@@ -91,6 +91,15 @@
       appearance: none;
       cursor: pointer;
     }
+
+    .preview {
+      margin-top: 15px;
+
+      img {
+        display: block;
+        max-width: 100%;
+      }
+    }
   }
 
   > footer {
