--- a/app/views/management/page_steps/title.html.erb
+++ b/app/views/management/page_steps/title.html.erb
@@ -32,48 +32,35 @@
             <%= f.label :uri %>
             <%= f.text_field :uri, placeholder: 'my-page', :readonly => @page.content_type == ContentType::STATIC_CONTENT %>
           </div>
-        <div class="container">
-          <%= f.label :tags %>
-          <%= f.text_field :tags_attributes, placeholder: 'tags', value: f.object.tags.pluck(:value).join(' ') %>
-        </div>
+          <div class="container">
+            <%= f.label :tags %>
+            <%= f.text_field :tags_attributes, placeholder: 'tags', value: f.object.tags.pluck(:value).join(' ') %>
+          </div>
+        <% end %>
+        <% unless [ContentType::HOMEPAGE, ContentType::TAG_SEARCHING].include?(@page.content_type) %>
+          <div class="container">
+            <%= f.label :thumbnail, value: 'Change thumbnail', for: 'thumbnail', tabindex: '0' %>
+            <%= f.file_field :thumbnail, id: 'thumbnail', accept: 'image/*', 'data-type': 'image', class: 'js-data-path', placeholder: 'Select a file' %>
+
+            <% if !@page.thumbnail.nil? && @page.thumbnail_file_name %>
+              <div class="preview js-preview">
+                <%= image_tag @page.thumbnail.url, alt: 'Current thumbnail' %>
+              </div>
+            <% end %>
+          </div>
+
+          <div class="container">
+            <%= f.label :cover_image, value: 'Change cover image', for: 'cover_image', tabindex: '0' %>
+            <%= f.file_field :cover_image, id: 'cover_image', accept: 'image/*', 'data-type': 'image', class: 'js-data-path', placeholder: 'Select a file' %>
+
+            <% if !@page.cover_image.nil? && @page.cover_image_file_name %>
+              <div class="preview js-preview">
+                <%= image_tag @page.thumbnail.url, alt: 'Current cover image' %>
+              </div>
+            <% end %>
+          </div>
         <% end %>
       </div>
-
-      <% unless [ContentType::HOMEPAGE, ContentType::TAG_SEARCHING].include?(@page.content_type) %>
-        <div class="container">
-          <div class="l-site-creation -settings">
-            <div class="settings">
-              <div class="logo">
-                <%= f.label :thumbnail, value: 'Change thumbnail', for: 'thumbnail', tabindex: '0' %>
-                <%= f.file_field :thumbnail, id: 'thumbnail', accept: 'image/*', 'data-type': 'image', class: 'js-data-path', placeholder: 'Select a file' %>
-
-                <% if !@page.thumbnail.nil? && @page.thumbnail_file_name %>
-                  <div class="preview js-preview">
-                    <%= image_tag @page.thumbnail.url, alt: 'Logo image' %>
-                  </div>
-                <% end %>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="container">
-          <div class="l-site-creation -settings">
-            <div class="settings">
-              <div class="logo">
-                <%= f.label :cover_image, value: 'Change Cover Image', for: 'cover_image', tabindex: '0' %>
-                <%= f.file_field :cover_image, id: 'cover_image', accept: 'image/*', 'data-type': 'image', class: 'js-data-path', placeholder: 'Select a file' %>
-
-                <% if !@page.cover_image.nil? && @page.cover_image_file_name %>
-                  <div class="preview js-preview">
-                    <%= image_tag @page.thumbnail.url, alt: 'Logo image' %>
-                  </div>
-                <% end %>
-              </div>
-            </div>
-          </div>
-        </div>
-        <% end %>
 
         <% unless @page.content_type == ContentType::HOMEPAGE or @page.content_type == ContentType::STATIC_CONTENT %>
           <footer>
