Added primaryForests and recentImagery to the map as well as OtherFields json

--- a/app/views/management/page_steps/map.html.erb
+++ b/app/views/management/page_steps/map.html.erb
@@ -51,6 +51,10 @@
           <div class="c-inputs-container -large">
             <%= render partial: 'management/site_pages/map/layer_panel', locals: { form: ff } %>
           </div>
+
+          <div class="c-inputs-container -large">
+            <%= render partial: 'management/site_pages/map/others_panel', locals: { form: ff } %>
+          </div>
         <% end %>
 
     </div>
