--- a/app/views/management/site_pages/map/_layer.html.erb
+++ b/app/views/management/site_pages/map/_layer.html.erb
@@ -39,9 +39,17 @@
         type: :check_box,
         description: "Check this if you would like to include Terra I tree cover loss alerts in your map. Terra I alerts are only available in the tropics."
       },
-      'formaAlerts': {
+      'forma': {
         type: :check_box,
         description: "Check this if you like to would to include Forma alerts in your map. Forma alerts are only available for areas in the humid tropical forest biome."
+      },
+      'primaryForests': {
+        type: :check_box,
+        description: 'Check this if you like to would to include the GFW primary forest layer in your map.'
+      },
+      'recentImagery': {
+        type: :check_box,
+        description: 'Check this if you would like to include to recent satellite imagery in your map, recent imagery includes imagery from Sentinal and Landsat satellites acquired within the past year.'
       }
   } %>
 
