Changed the map editor to send values as true or false

--- a/app/views/management/site_pages/map/_base.html.erb
+++ b/app/views/management/site_pages/map/_base.html.erb
@@ -55,7 +55,7 @@
     <div class="container">
       <% if value[:type].to_s == 'check_box' %>
         <div class="c-checkbox">
-          <%= settings.check_box key, id: 'map-' + key.to_s %>
+          <%= settings.check_box key, { id: 'map-' + key.to_s }, 'true', 'false' %>
           <label for="map-<%= key %>">
             <%= key.capitalize %>
             <% if !value[:description].blank? %>
