--- a/app/views/management/site_pages/map/_language.html.erb
+++ b/app/views/management/site_pages/map/_language.html.erb
@@ -47,7 +47,7 @@
         <%= eval("settings.select :#{key}, #{value[:type]}, {}, id: 'map-#{key}'")%>
       <% elsif value[:type].to_s == 'check_box' %>
         <div class="c-checkbox">
-          <%= settings.check_box key, id: 'map-' + key.to_s %>
+          <%= settings.check_box key, { id: 'map-' + key.to_s }, 'true', 'false' %>
           <label for="map-<%= key %>">
             <%= key.capitalize %>
             <% if !value[:description].blank? %>
