Bug fix: creating a new map wasn't importing the layerPanel and analysisModules from the default map

--- a/app/views/management/site_pages/map/_analysis.html.erb
+++ b/app/views/management/site_pages/map/_analysis.html.erb
@@ -1,4 +1,4 @@
-<h3>Analysis Module</h3>
+<h3>Analysis Modules</h3>
 
 <%= form.fields_for :settings, @page.settings_structure do |settings| %>
   <div class="container">
