--- a/app/views/management/site_pages/map/_layer_panel.html.erb
+++ b/app/views/management/site_pages/map/_layer_panel.html.erb
@@ -22,7 +22,7 @@
           } catch (e) {}
         }
       });
-      var layerPanelValue = JSON.parse('<%= settings.object.layerPanel.try(:html_safe) %>');
+      var layerPanelValue = JSON.parse('<%= settings.object.layerPanel.try(:squish).try(:html_safe) %>');
 
       layerPanelContainer.editor = layerPanelEditor;
       layerPanelContainer.input = layerPanelInput;
