--- a/app/views/management/site_pages/map/_others_panel.html.erb
+++ b/app/views/management/site_pages/map/_others_panel.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <label>
       OTHER FIELDS MODULE
-      <button type="button" class="info-button" data-tippy="Use this panel to manage the analysis options which are included in your mapbuilder map. Users have the option to remove default analysis and can also add their own custom analysis. You may modify the json to remove analysis or add your own custom analysis. For more information on the configuration options for the analysis module consult the analysis module section of the mapbuilder wiki." data-tippy-interactive="true">Field information</button>
+      <button type="button" class="info-button" data-tippy="Use this panel to manage the other options which are included in your mapbuilder map. Users have the option to remove default analysis and can also add their own custom analysis. You may modify the json to remove analysis or add your own custom analysis. For more information on the configuration options for the analysis module consult the analysis module section of the mapbuilder wiki." data-tippy-interactive="true">Field information</button>
     </label>
     <%= settings.hidden_field :otherFieldsModules, { name: 'site_page[content][settings][otherFieldsModules]' }  %>
 
@@ -23,7 +23,7 @@
           } catch (e) {}
         }
       });
-      var otherFieldsModulesValue = JSON.parse('<%= settings.object.otherFieldsModules.try(:html_safe) %>');
+      var otherFieldsModulesValue = JSON.parse('<%= settings.object.otherFieldsModules.try(:squish).try(:html_safe) %>');
 
       otherFieldsModulesContainer.editor = otherFieldsModulesEditor;
       otherFieldsModulesContainer.input = otherFieldsModulesInput;
