Bug fix: parsing of map version returned an empty string instead of an empty json object

--- a/app/views/management/site_pages/map/_analysis.html.erb
+++ b/app/views/management/site_pages/map/_analysis.html.erb
@@ -23,7 +23,7 @@
           } catch (e) {}
         }
       });
-      var analysisModulesValue = JSON.parse('<%= settings.object.analysisModules.try(:squish).try(:html_safe) %>');
+      var analysisModulesValue = JSON.parse('<%= settings.object.analysisModules.squish.html_safe rescue {} %>');
 
       analysisModulesContainer.editor = analysisModulesEditor;
       analysisModulesContainer.input = analysisModulesInput;
