--- a/app/views/management/site_pages/map/_others_panel.html.erb
+++ b/app/views/management/site_pages/map/_others_panel.html.erb
@@ -23,7 +23,7 @@
           } catch (e) {}
         }
       });
-      var otherFieldsModulesValue = JSON.parse('<%= settings.object.otherFieldsModules.try(:squish).try(:html_safe) %>');
+      var otherFieldsModulesValue = JSON.parse('<%= settings.object.otherFieldsModules.squish.html_safe rescue {} %>');
 
       otherFieldsModulesContainer.editor = otherFieldsModulesEditor;
       otherFieldsModulesContainer.input = otherFieldsModulesInput;
