Fix a bug where the cover images wouldn't work on staging and production
The stylesheets of staging and production wouldn't contain slick's styles.

--- a/app/assets/stylesheets/front/_template-fa.css.scss.erb
+++ b/app/assets/stylesheets/front/_template-fa.css.scss.erb
@@ -7,6 +7,8 @@
 '../../../node_modules/rc-slider/assets/index',
 '../../../node_modules/react-select/dist/react-select',
 '../../../node_modules/vizz-wysiwyg/build/rw',
+'../../../node_modules/slick-carousel/slick/slick.scss',
+'../../../node_modules/slick-carousel/slick/slick-theme.scss',
 'leaflet',
 '../../app/assets/stylesheets/helpers',
 '../../app/assets/stylesheets/front/settings-theme-fa',
