--- a/app/assets/stylesheets/front/application-theme-carpe.scss
+++ b/app/assets/stylesheets/front/application-theme-carpe.scss
@@ -1,6 +1,7 @@
 // This file is used in development only
 $color-1:#97BE32;
 
+// PLEASE DON'T FORGET TO UPDATE THE "_template-XXX.css.scss.erb" FILES TOO
 @import
 '../../../node_modules/widget-editor/dist/styles.min',
 '../../../node_modules/rc-slider/assets/index',
