Added fail safe mechanism for when the map json fields contain quotation marks or invalid data

--- a/app/views/management/site_pages/map/_analysis.html.erb
+++ b/app/views/management/site_pages/map/_analysis.html.erb
@@ -23,7 +23,12 @@
           } catch (e) {}
         }
       });
-      var analysisModulesValue = JSON.parse('<%= settings.object.analysisModules.squish.html_safe rescue {} %>');
+      var analysisModulesValue;
+      try {
+        analysisModulesValue = JSON.parse('<%= settings.object.analysisModules.gsub("'", "\\\\'").squish.html_safe rescue {} %>');
+      } catch (err) {
+        analysisModulesValue = JSON.parse('{}');
+      }
 
       analysisModulesContainer.editor = analysisModulesEditor;
       analysisModulesContainer.input = analysisModulesInput;
