Improve the icon of the user profile
When the user doesn't have any photo, the two first letters of their email address is displayed. We previously displayed the first letters of their name but it might also be missing.

--- a/app/views/front/_user.html.erb
+++ b/app/views/front/_user.html.erb
@@ -3,7 +3,7 @@
 
     <li class="dropdown-item">
       <div class="profile-image" style="background-image: url(<%= session[:current_user][:photo] %>);">
-        <%= session[:current_user][:name][0..1] unless session[:current_user][:photo] || session[:current_user][:name].blank? %>
+        <%= session[:current_user][:email][0..1] unless session[:current_user][:photo] %>
       </div>
       <ul>
         <li>
