Fail safe mechanism when displaying a site without cover images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <meta property="og:title" content="<%= @site_page.site.name + ' - ' + @site_page.name %>" />
   <meta property="og:url" content="<%= @site_page&.routes&.first&.host.to_s + @site_page.url %>" />
-  <meta property="og:image" content="<%= @site_page&.routes&.first&.host.to_s  + @site_page.site.site_settings.where(name: 'main_image').first&.image&.url %>" />
+  <meta property="og:image" content="<%= @site_page&.routes&.first&.host.to_s  + @site_page.site.site_settings.where(name: 'main_image').first&.image&.url.to_s %>" />
 
   <link rel="icon" type="image/png" href="<%= @favico %>" />
   <link rel="apple-touch-icon" href="<%= @favico %>">
