--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -9,47 +9,40 @@
 
 <% content_for :external_js do %>
   <script id="library-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/<%= @site_page.content['version'] || '1.1.15' %>.js"></script>
-  <script>
-        var mapDatabaseConfig = JSON.parse('<%= @map_content %>')
+  <script type="text/javascript">  
 
+  function ready(fn) {
+    if (document.attachEvent ? document.readyState === "complete" : document.readyState !== "loading"){
+      fn();
+    } else {
+      document.addEventListener('DOMContentLoaded', fn);
+    }
+  }
+
+  ready(function () {
+    console.log('GON', window.gon);
+    var mapDatabaseConfig = JSON.parse('<%= @map_content %>')
+        var triggerCustom;
         var mapConfig = Object.assign(mapDatabaseConfig, {
           title: '<%= @site_page.site.name %>'
         });
 
-        var triggerCustom = function() {
-        const subscriptions = [{
-            'type': 'subscription',
-            'id': '5af2197db824a311006f38ed',
-            'attributes': {
-                'name': 'test for date',
-                'createdAt': '2018-05-08T21:41:17.808Z',
-                'userId': '588f5dda35c8259767ed15ab',
-                'resource': {
-                    'type': 'EMAIL',
-                    'content': 'lc07@uw.edu'
-                },
-                'datasets': ['umd-loss-gain'],
-                'params': {
-                    'iso': {
-                        'subRegion': null,
-                        'region': null,
-                        'country': null
-                    },
-                    'wdpaid': null,
-                    'use': null,
-                    'useid': null,
-                    'geostore': '8dcf1b5fe27b2b8dfa392b346f778f5f'
-                },
-                'confirmed': false,
-                'language': 'en',
-                'datasetsQuery': []
-            }
-        }];
-
-        const customEvent = new CustomEvent('listenToThisSubscriptionCall', { detail: subscriptions});
-        console.log('customEvent', customEvent);
-        window.dispatchEvent(customEvent);
-      }
+        // Get subscriptions
+        fetch('https://production-api.globalforestwatch.org/v1/subscriptions', {
+          method: 'GET',
+          headers: {
+            Authorization: 'Bearer <%= session[:user_token] %>'
+          }
+        }).then(function(response) {
+          return response.json();
+        })
+        .then(function(subscriptions) {
+          triggerCustom = function() {
+            var customEvent = new CustomEvent('listenToThisSubscriptionCall', { detail: subscriptions.data});
+            console.log('customEvent', customEvent);
+            window.dispatchEvent(customEvent);
+          }
+        });
 
         var ll = new MapBuilder({
           el: 'root', // We need a div ID, not a class
@@ -59,7 +52,7 @@
           html: '<%= @map_html %>',
           //base: ""
         });
-
+      });
     </script>
 <% end %>
 
