--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -431,6 +431,36 @@
     text-align: center;
     font-size: $font-size-small;
   }
+
+  .c-we-chart-download {
+    display: flex;
+    justify-content: flex-end;
+    flex-basis: 100%;
+
+    .download {
+      display: inline-block;
+      min-width: 35px;
+      height: 35px;
+      margin-left: 10px;
+      padding: 0 10px;
+      border: 1px solid $color-1;
+      border-radius: 30px;
+      background: rgba($color-1, .1);
+      color: $color-4;
+      line-height: 35px;
+      cursor: pointer;
+
+      svg {
+        width: 16px;
+        height: 16px;
+        vertical-align: text-bottom;
+
+        use {
+          fill: $color-4;
+        }
+      }
+    }
+  }
 }
 
 .fa-wysiwyg-file {
