Fix issues with the template for India

--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -46,7 +46,7 @@
     </div>
   </div>
 
-  <% load_alternate_logo = (@site_page.site_template.name == 'INDIA' and @site_page.name != "Homepage") %>
+  <% load_alternate_logo = (@site_page.site_template.name == 'INDIA' and @site_page.content_type != ContentType::HOMEPAGE) %>
   <% if load_alternate_logo %>
     <% @image_url = "http://wri-sites.s3.amazonaws.com/ifmt/NationalAtlasPartnerLogo/Atlas/WRI-Atlas-logo_unit.png" %>
   <% end %>
