--- a/app/views/site_page/tag_searching.erb
+++ b/app/views/site_page/tag_searching.erb
@@ -6,7 +6,8 @@
   page: @page_number,
   totalPages: @total_pages,
   results: @search_results,
-  hideSearchBar: true
+  hideSearchBar: true,
+  className: '-standalone'
 }) %>
 
 <script type="text/javascript">
