--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -28,7 +28,7 @@
         });
 
         // Get subscriptions
-        fetch('https://production-api.globalforestwatch.org/v1/subscriptions', {
+        fetch('<%= ENV['FA_PUBLIC_FOLDER']%>/subscriptions', {
           method: 'GET',
           headers: {
             Authorization: 'Bearer <%= session[:user_token] %>'
