--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -10,6 +10,7 @@
 <% content_for :external_js do %>
   <script id="library-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/<%= @site_page.content['version'] || '1.1.15' %>.js"></script>
   <script type="text/javascript">  
+  var triggerCustom;
 
   function ready(fn) {
     if (document.attachEvent ? document.readyState === "complete" : document.readyState !== "loading"){
@@ -20,26 +21,19 @@
   }
 
   ready(function () {
-    console.log('GON', window.gon);
-    var mapDatabaseConfig = JSON.parse('<%= @map_content %>')
-        var triggerCustom;
+    var mapDatabaseConfig = JSON.parse('<%= @map_content %>');
         var mapConfig = Object.assign(mapDatabaseConfig, {
           title: '<%= @site_page.site.name %>'
         });
-
         // Get subscriptions
         fetch('<%= ENV['FA_PUBLIC_FOLDER']%>/subscriptions', {
           method: 'GET',
-          headers: {
-            Authorization: 'Bearer <%= session[:user_token] %>'
-          }
         }).then(function(response) {
           return response.json();
         })
         .then(function(subscriptions) {
           triggerCustom = function() {
-            var customEvent = new CustomEvent('listenToThisSubscriptionCall', { detail: subscriptions.data});
-            console.log('customEvent', customEvent);
+            var customEvent = new CustomEvent('subscriptionCall', { detail: subscriptions.data });
             window.dispatchEvent(customEvent);
           }
         });
@@ -47,7 +41,7 @@
         var ll = new MapBuilder({
           el: 'root', // We need a div ID, not a class
           config: mapConfig,
-          subscriptionEventName: 'listenToThisSubscriptionCall',
+          subscriptionEventName: 'subscriptionCall',
           version: '<%= @site_page.content['version'] || '1.1.15' %>',
           html: '<%= @map_html %>',
           //base: ""
