--- a/app/views/site_page/dashboard_v2.html.erb
+++ b/app/views/site_page/dashboard_v2.html.erb
@@ -15,7 +15,8 @@
     dataset: @site_page.dashboard_setting.dataset_id,
     widget: @site_page.dashboard_setting.widget_id,
     topContent: @site_page.dashboard_setting.content_top,
-    bottomContent: @site_page.dashboard_setting.content_bottom
+    bottomContent: @site_page.dashboard_setting.content_bottom,
+    columns: @site_page.dashboard_setting.columns
   }) %>
 </div>
 
