--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -8,49 +8,37 @@
 <div class="modal-wrapper hidden" id="share-modal"></div>
 
 <% content_for :external_js do %>
-  <script id="library-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/<%= @site_page.content['version'] || '1.1.15' %>.js"></script>
+  <script id="library-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/<%= @site_page.content['version'] || '1.3.3' %>.js"></script>
   <script type="text/javascript">  
-  var triggerCustom;
-
-  function ready(fn) {
-    if (document.attachEvent ? document.readyState === "complete" : document.readyState !== "loading"){
-      fn();
-    } else {
-      document.addEventListener('DOMContentLoaded', fn);
-    }
-  }
-
-  ready(function () {
+    var triggerCustom;
     var mapDatabaseConfig = JSON.parse('<%= @map_content %>');
-        var mapConfig = Object.assign(mapDatabaseConfig, {
-          title: '<%= @site_page.site.name %>'
-        });
-        // Get subscriptions
-        fetch('<%= ENV['FA_PUBLIC_FOLDER']%>/subscriptions', {
-          method: 'GET',
-          headers: {
-            Authorization: 'Bearer <%= session[:user_token] %>'            
-          }
-        }).then(function(response) {
-          return response.json();
-        })
-        .then(function(subscriptions) {
-          console.log('subscriptiosn', subscriptions);
-          triggerCustom = function() {
-            var customEvent = new CustomEvent('subscriptionCall', { detail: subscriptions.data || 'no subscriptions'});
-            window.dispatchEvent(customEvent);
-          }
-        });
+    var mapConfig = Object.assign(mapDatabaseConfig, {
+      title: '<%= @site_page.site.name %>'
+    });
+    // Get subscriptions
+    fetch('<%= ENV['FA_PUBLIC_FOLDER']%>/subscriptions', {
+      method: 'GET',
+      headers: {
+        Authorization: 'Bearer <%= session[:user_token] %>'            
+      }
+    }).then(function(response) {
+      return response.json();
+    })
+    .then(function(subscriptions) {
+      triggerCustom = function() {
+        var customEvent = new CustomEvent('listenToThisSubscriptionCall', { detail: subscriptions.data });
+        window.dispatchEvent(customEvent);
+      }
+    });
 
-        var ll = new MapBuilder({
-          el: 'root', // We need a div ID, not a class
-          config: mapConfig,
-          subscriptionEventName: 'subscriptionCall',
-          version: '<%= @site_page.content['version'] || '1.1.15' %>',
-          html: '<%= @map_html %>',
-          //base: ""
-        });
-      });
+    var ll = new MapBuilder({
+      el: 'root', // We need a div ID, not a class
+      config: mapConfig,
+      subscriptionEventName: 'listenToThisSubscriptionCall',
+      version: '<%= @site_page.content['version'] || '1.3.3' %>',
+      html: '<%= @map_html %>',
+      //base: ""
+    });
     </script>
 <% end %>
 
@@ -58,7 +46,6 @@
   window.route = 'Map';
   $( "body" ).on( "click", ".triggerMySubscriptions", function(e) {
     e.preventDefault();
-    console.log(triggerCustom());
     triggerCustom();
   });
 </script>
